sched_get/setaffinity(3): pid 0 should designate current process

while FreeBSD' native sched_get/setaffinity use pid -1 for this.

PR:	260487
MFC after:	1 week