lib/libc/gen/sched_setaffinity.c
@@ -32,6 +32,6 @@
 int
 sched_setaffinity(pid_t pid, size_t cpusetsz, const cpuset_t *cpuset)
 {
-	return (cpuset_setaffinity(CPU_LEVEL_WHICH, CPU_WHICH_PID, pid,
-	    cpusetsz, cpuset));
+	return (cpuset_setaffinity(CPU_LEVEL_WHICH, CPU_WHICH_PID,
+	    pid == 0 ? -1 : pid, cpusetsz, cpuset));
 }
